Fix vertical alignment of search form icon

--- a/_assets/stylesheets/modules/_forms.scss
+++ b/_assets/stylesheets/modules/_forms.scss
@@ -12,8 +12,9 @@ input[type=search] {
 
   & + label {
     position: absolute;
+    top: 50%;
+    transform:translateY(-50%);
     right: 0.75rem;
-    padding-top: 0.5rem;
   }
 }
 
